--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "personal-web",
   "version": "0.1.0",
+  "engines": {
+    "node": "16.6.0"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -12,6 +15,7 @@
     "react": "^16.8",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^16.8",
+    "react-icons": "^4.2.0",
     "react-mapbox-gl": "^5.1.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2",
