--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
-  "name": "personal-web",
+  "name": "my-react-app",
   "version": "0.1.0",
-  "engines": {
-    "node": "16.6.0"
-  },
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "bootstrap": "^5.1.0",
-    "mapbox-gl": "^1.13.1",
+    "bootstrap": "^5.0.2",
+    "framer-motion": "^4.1.17",
+    "ityped": "^1.0.3",
     "node-sass": "^6.0.1",
-    "react": "^16.8",
-    "react-bootstrap": "^2.0.0-beta.6",
-    "react-dom": "^16.8",
+    "react": "^17.0.2",
+    "react-anime": "^4.0.4",
+    "react-bootstrap": "^2.0.0-beta.4",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-mapbox-gl": "^5.1.1",
+    "react-intersection-observer": "^8.32.0",
+    "react-map-gl": "^6.1.16",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
+    "react-scroll-motion": "^0.2.1",
+    "react-spinners": "^0.11.0",
+    "react-typewriter-effect": "^1.1.0",
+    "sass": "^1.43.4",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2",
     "windups": "^1.1.9"
   },
