--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "my-react-app",
+  "name": "personal-web",
   "version": "0.1.0",
+  "engines": {
+    "node": "16.6.0"
+  },
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
