--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^4.1.17",
     "ityped": "^1.0.3",
     "node-sass": "^6.0.1",
+    "postcss-custom-properties": "^8.0.11",
     "react": "^17.0.2",
     "react-anime": "^4.0.4",
     "react-bootstrap": "^2.0.0-beta.4",
@@ -28,7 +29,6 @@
     "react-scroll-motion": "^0.2.1",
     "react-spinners": "^0.11.0",
     "react-typewriter-effect": "^1.1.0",
-    "sass": "^1.43.4",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2",
     "windups": "^1.1.9"
